KIP-652 Set exported to true
