# server/controllers/archiveCtrl.js
@@ -46,9 +46,9 @@ async function _getAllArchiveFragments (req, res, next) {
 
 async function _putExportedArchiveFragments (req, res, next) {
   try {
-    const ids = req.body
-    log.debug('Set exported in _putExportedArchiveFragments with ids:', ids)
-    const dbResponse = await db.updateExportedArchiveFragments(ids)
+    const keys = req.body
+    log.debug('Set exported in _putExportedArchiveFragments with keys:', keys)
+    const dbResponse = await db.updateExportedArchiveFragments(keys)
     res.status(200).json(dbResponse)
   } catch (err) {
     log.error('Error in _putExportedArchiveFragments', { error: err })
